# openclaw-lab

./: .env.example  .gitignore  .gitleaks.toml  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  codeql.yml  secret-scan.yml
core/: __init__.py  auth.py  config.py  cost.py  ensemble.py  logging.py  nim_client.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  SKILLS.md
skills/caveman-compress/scripts/: cli.py  compress.py  detect.py  validate.py
skills/common/: tg.py
skills/job-search/: README.md  SKILL.md  job_search.py  requirements.txt
skills/research/: SKILL.md  research.py
skills/review/: SKILL.md  review.py
skills/search/: SKILL.md  requirements.txt  search.py
src/hooks/: caveman-activate.js  caveman-config.js  caveman-mode-tracker.js  caveman-stats.js  caveman-statusline.sh
src/mcp-servers/caveman-shrink/: compress.js  index.js  package.json
tests/: conftest.py
tests/unit/: test_auth.py  test_config.py  test_cost.py  test_ensemble.py  test_logging.py  test_nim_client.py
workspace/: JOB_SEARCHS_MASTER_PROMPT.md
