[project]
name = "openclaw-lab"
version = "1.0.0"
description = "Personal AI lab — OpenClaw gateway + NVIDIA NIM ensemble + Telegram + Claude Code integration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Eyasir Ahamed", email = "noreply@github.com" }]

dependencies = [
  "aiohttp>=3.9",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "apscheduler>=3.10",
  "duckduckgo-search>=6.0",
  "fake-useragent>=1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ─────────────────────────────────────────────────────────────────────────────
# Pytest
# ─────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--showlocals",
]
asyncio_mode = "auto"
markers = [
  "integration: tests that touch the real network or filesystem outside tmp",
  "slow: tests over 1 second",
]

# ─────────────────────────────────────────────────────────────────────────────
# Ruff
# ─────────────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "workspace",
  "data",
  "logs",
  "src/mcp-servers",
]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pyflakes + pycodestyle
  "I",             # isort
  "B",             # bugbear
  "UP",            # pyupgrade
  "SIM",           # simplifications
  "RUF",           # ruff-specific
]
ignore = [
  "E501",  # line length handled by formatter
  "B008",  # function calls in default args (FastAPI pattern)
  "SIM117",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "B017"]
"skills/**/*.py" = ["E402"]  # late imports after sys.path manipulation

# ─────────────────────────────────────────────────────────────────────────────
# Mypy (intentionally loose — full strict would burn weeks)
# ─────────────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
files = ["core"]

# ─────────────────────────────────────────────────────────────────────────────
# Setuptools — treat repo as a flat layout for `import core`, `import skills`
# ─────────────────────────────────────────────────────────────────────────────

[tool.setuptools]
packages = ["core"]
